weather/kube/fastapi-weather-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-weather
  template:
    metadata:
      labels:
        app: fastapi-weather
    spec:
      containers:
      - name: fastapi-weather
        image: drjsjeong/fastapi-weather-app:latest
        ports:
        - containerPort: 8000
